--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="stylesheet" href="scss/main.css" />
   </head>
   <body>
-    <header class="header">
-      <h1 class="header-title">Hello</h1>
-    </header>
+    <header class="header">TEST</header>
   </body>
 </html>
