--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>New York City</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="scss/main.css" />
   </head>
   <body>
-    <header class="header">
-      <h1 class="header-title">Hello</h1>
-    </header>
+    <header class="header"></header>
   </body>
 </html>
