--- a/index.html
+++ b/index.html
@@ -9,7 +9,5 @@
     />
     <link rel="stylesheet" href="scss/main.css" />
   </head>
-  <body>
-    <header class="header"></header>
-  </body>
+  <body></body>
 </html>
