--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     />
     <link rel="stylesheet" href="scss/main.css" />
   </head>
-  <body></body>
+  <body>
+    <header>TEST<header>
+  </body>
 </html>
