--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="scss/main.css" />
   </head>
   <body>
-    <header>TEST<header>
+    <header class="header">
+      <h1 class="header-title">TEST</h1>
+    <header>
   </body>
 </html>
