nav bar trialing 1

--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
     <link rel="stylesheet" href="scss/main.css" />
   </head>
   <body>
-    <header class="header">
-      <h1 class="header-title">TEST</h1>
-    <header>
+    <nav id="nav-bar">
+      <div class="container">
+        <div id="nav-bar-content">
+          <h1 id="nav-nyc" class="nyc center-in-container">New York City</h1>
+          <ul class="center-in-container nav-menu" id="menu">
+            <li><a href="#culture" class="anchor">CULTURE</a></li>
+            <li><a href="#attractions" class="anchor">ATTRACTIONS</a></li>
+            <li><a href="#restaurants" class="anchor">RESTAURANTS</a></li>
+            <li><a href="#sports" class="anchor">SPORTS</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
   </body>
 </html>
