--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
     />
     <link rel="stylesheet" href="scss/main.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="container">
+      <div class="left-side">
+        <h1>New York City</h1>
+      </div>
+      <div class="right-side">
+        <button class="button">CULTURE</button>
+        <button class="button">ATTRACTIONS</button>
+        <button class="button">RESTAURANTS</button>
+        <button class="button">SPORTS</button>
+      </div>
+    </header>
+  </body>
 </html>
