media query fix

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   </head>
   <body>
     <header class="container">
+      <div class="empire">
+        <img src="img/empire-state-building.png" />
+      </div>
       <div class="left-side">
         <h1>New York City</h1>
       </div>
