--- a/index.html
+++ b/index.html
@@ -24,5 +24,27 @@
         <button class="button">SPORTS</button>
       </div>
     </header>
+    <section class="culture-container">
+      <div class="culture-label">
+        <h>CULTURE</h>
+      </div>
+      <div class="culture-images">
+        <img src="img/fire-escape-nyc.jpg" />
+        <img src="img/subway-nyc.jpg" />
+        <img src="img/side-building-nyc.jpg" />
+      </div>
+      <div class="culture-text">
+        <p>
+          Culture Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Quibusdam, possimus recusandae sed impedit sequi maiores et, facere
+          nam ipsum fugiat veniam pariatur, quia architecto alias praesentium
+          perspiciatis saepe cumque similique. Lorem ipsum dolor sit, amet
+          consectetur adipisicing elit. Obcaecati veritatis consectetur repellat
+          tempora maiores nobis inventore facilis commodi earum, iusto excepturi
+          accusantium, expedita tenetur iure mollitia consequuntur consequatur.
+          Assumenda, culpa.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
