--- a/index.html
+++ b/index.html
@@ -29,9 +29,17 @@
         <h>CULTURE</h>
       </div>
       <div class="culture-images">
-        <img src="img/fire-escape-nyc.jpg" />
-        <img src="img/subway-nyc.jpg" />
-        <img src="img/side-building-nyc.jpg" />
+        <img
+          src="img/fire-escape-nyc.jpg"
+          alt=""
+          class="culture-image fire-escape"
+        />
+        <img src="img/subway-nyc.jpg" alt="" class="culture-image subway" />
+        <img
+          src="img/side-building-nyc.jpg"
+          alt=""
+          class="culture-image side-building"
+        />
       </div>
       <div class="culture-text">
         <p>
