start of header

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
         <button class="button">SPORTS</button>
       </div>
     </header>
+    <div class="intro-container">
+      <h>Welcome to New York</h>
+    </div>
   </body>
 </html>
