media queries and slideshow done

--- a/index.html
+++ b/index.html
@@ -28,18 +28,24 @@
       <div class="culture-label">
         <h>CULTURE</h>
       </div>
-      <div class="culture-images">
-        <img
-          src="img/fire-escape-nyc.jpg"
-          alt=""
-          class="culture-image fire-escape"
-        />
-        <img src="img/subway-nyc.jpg" alt="" class="culture-image subway" />
-        <img
-          src="img/side-building-nyc.jpg"
-          alt=""
-          class="culture-image side-building"
-        />
+      <div class="culture-image-parent">
+        <div class="culture-images">
+          <img
+            src="img/fire-escape-nyc.jpg"
+            alt="Slide 3 - NYC Building"
+            class="culture-image"
+          />
+          <img
+            src="img/subway-nyc.jpg"
+            alt="Slide 2 - Subway"
+            class="culture-image"
+          />
+          <img
+            src="img/side-building-nyc.jpg"
+            alt="Slide 1 - NYC Building"
+            class="culture-image"
+          />
+        </div>
       </div>
       <div class="culture-text">
         <p>
