Added some images and fixed font

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="button">CULTURE</button>
         <button class="button">ATTRACTIONS</button>
         <button class="button">RESTAURANTS</button>
-        <button class="button">SPORTS</button>
+        <button class="button">LEARN MORE</button>
       </div>
     </header>
     <section class="culture-container">
@@ -31,18 +31,38 @@
       <div class="culture-image-parent">
         <div class="culture-images">
           <img
+            src="img/radio-city-music-hall-nyc.jpg"
+            alt="Slide 7 - Radio City Music Hall"
+            class="culture-image"
+          />
+          <img
+            src="img/graffiti-nyc.jpg"
+            alt="Slide 6 - Graffiti"
+            class="culture-image"
+          />
+          <img
+            src="img/empire-nyc.jpg"
+            alt="Slide 5 - Empire State Building"
+            class="culture-image"
+          />
+          <img
             src="img/fire-escape-nyc.jpg"
-            alt="Slide 3 - NYC Building"
+            alt="Slide 4 - NYC Building"
             class="culture-image"
           />
           <img
             src="img/subway-nyc.jpg"
-            alt="Slide 2 - Subway"
+            alt="Slide 3 - Subway"
             class="culture-image"
           />
           <img
             src="img/side-building-nyc.jpg"
-            alt="Slide 1 - NYC Building"
+            alt="Slide 2 - NYC Building"
+            class="culture-image"
+          />
+          <img
+            src="img/street-above-nyc.jpg"
+            alt="Slide 1 - NYC Street From Above"
             class="culture-image"
           />
         </div>
@@ -56,7 +76,10 @@
           consectetur adipisicing elit. Obcaecati veritatis consectetur repellat
           tempora maiores nobis inventore facilis commodi earum, iusto excepturi
           accusantium, expedita tenetur iure mollitia consequuntur consequatur.
-          Assumenda, culpa.
+          Assumenda, culpa. Lorem ipsum dolor sit amet, consectetur adipisicing
+          elit. Dicta asperiores cupiditate suscipit atque rem laborum nesciunt
+          earum deserunt? Cupiditate accusamus perferendis deserunt libero
+          dolorem consectetur laudantium amet a quos? Quisquam!
         </p>
       </div>
     </section>
