change learn more to more

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <button class="button">CULTURE</button>
         <button class="button">ATTRACTIONS</button>
         <button class="button">RESTAURANTS</button>
-        <button class="button">LEARN MORE</button>
+        <button class="button">MORE</button>
       </div>
     </header>
     <section class="culture-container">
