--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </header>
     <div class="intro-container">
-      <h>Welcome to New York</h>
+      <h>NYC</h>
     </div>
     <section class="culture-container">
       <div class="culture-label">
