--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       href="https://fonts.googleapis.com/css2?family=Rajdhani&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="scss/main.css" />
   </head>
   <body>
