--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
         <button class="button">LEARN MORE</button>
       </div>
     </header>
-    <div class="intro-container">
-      <h>NYC</h>
+    <div class="video-and-text">
+      <video id="video" autoplay muted loop>
+        <source src="/video/night-drone-nyc.mp4" type="video/mp4" />
+      </video>
+      <h class="video-text">NYC</h>
     </div>
     <section class="culture-container">
       <div class="culture-label">
