fixed bar and text and media

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <button class="button">CULTURE</button>
         <button class="button">ATTRACTIONS</button>
         <button class="button">RESTAURANTS</button>
-        <button class="button">LEARN MORE</button>
+        <button class="button button-more">MORE</button>
       </div>
     </header>
     <div class="video-and-text">
