--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div class="left-side">
         <h1>New York City</h1>
       </div>
-      <div class="right-side">
-        <button class="button">CULTURE</button>
-        <button class="button">ATTRACTIONS</button>
-        <button class="button">RESTAURANTS</button>
-        <button class="button button-more">MORE</button>
+      <div class="navbar">
+        <li><a href="#culture">CULTURE</a></li>
+        <li><a href="#attractions">ATTRACTIONS</a></li>
+        <li><a href="#restaurants">RESTAURANTS</a></li>
+        <li><a href="#more" class="button-more">MORE</a></li>
       </div>
     </header>
     <div class="video-and-text">
@@ -35,7 +35,7 @@
       </video>
       <h class="video-text">NYC</h>
     </div>
-    <section class="culture-container">
+    <section id="culture" class="culture-container">
       <div class="culture-label">
         <h>CULTURE</h>
       </div>
