--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="img/empire-state-building.png" />
       </div>
       <div class="left-side">
-        <h1>New York City</h1>
+        <li><a href="#newyorkcity" class="newyorkcity">New York City</a></li>
       </div>
       <div class="navbar">
         <li><a href="#culture">CULTURE</a></li>
@@ -29,7 +29,7 @@
         <li><a href="#more" class="button-more">MORE</a></li>
       </div>
     </header>
-    <div class="video-and-text">
+    <div class="video-and-text" id="newyorkcity">
       <video id="video" autoplay muted loop>
         <source src="/video/night-drone-nyc.mp4" type="video/mp4" />
       </video>
