--- a/index.html
+++ b/index.html
@@ -94,5 +94,64 @@
         </p>
       </div>
     </section>
+    <section id="attractions" class="attractions-container">
+      <div class="attractions-label">
+        <h>ATTRACTIONS</h>
+      </div>
+      <div class="attractions-image-parent">
+        <div class="attractions-images">
+          <img
+            src="img/radio-city-music-hall-nyc.jpg"
+            alt="Slide 7 - Radio City Music Hall"
+            class="attractions-image"
+          />
+          <img
+            src="img/graffiti-nyc.jpg"
+            alt="Slide 6 - Graffiti"
+            class="attractions-image"
+          />
+          <img
+            src="img/empire-nyc.jpg"
+            alt="Slide 5 - Empire State Building"
+            class="attractions-image"
+          />
+          <img
+            src="img/fire-escape-nyc.jpg"
+            alt="Slide 4 - NYC Building"
+            class="attractions-image"
+          />
+          <img
+            src="img/subway-nyc.jpg"
+            alt="Slide 3 - Subway"
+            class="attractions-image"
+          />
+          <img
+            src="img/side-building-nyc.jpg"
+            alt="Slide 2 - NYC Building"
+            class="attractions-image"
+          />
+          <img
+            src="img/street-above-nyc.jpg"
+            alt="Slide 1 - NYC Street From Above"
+            class="attractions-image"
+          />
+        </div>
+      </div>
+      <div class="attractions-text">
+        <p>
+          Attractions Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Quibusdam, possimus recusandae sed impedit sequi maiores et, facere
+          nam ipsum fugiat veniam pariatur, quia architecto alias praesentium
+          perspiciatis saepe cumque similique. Lorem ipsum dolor sit, amet
+          consectetur adipisicing elit. Obcaecati veritatis consectetur repellat
+          tempora maiores nobis inventore facilis commodi earum, iusto excepturi
+          accusantium, expedita tenetur iure mollitia consequuntur consequatur.
+          Assumenda, culpa. Lorem ipsum dolor sit amet, consectetur adipisicing
+          elit. Dicta asperiores cupiditate suscipit atque rem laborum nesciunt
+          earum deserunt? Cupiditate accusamus perferendis deserunt libero
+          dolorem consectetur laudantium amet a quos? Quisquam!
+        </p>
+      </div>
+    </section>
   </body>
 </html>
