--- a/index.html
+++ b/index.html
@@ -99,43 +99,10 @@
         <h>ATTRACTIONS</h>
       </div>
       <div class="attractions-image-parent">
-        <div class="attractions-images">
-          <img
-            src="img/radio-city-music-hall-nyc.jpg"
-            alt="Slide 7 - Radio City Music Hall"
-            class="attractions-image"
-          />
-          <img
-            src="img/graffiti-nyc.jpg"
-            alt="Slide 6 - Graffiti"
-            class="attractions-image"
-          />
-          <img
-            src="img/empire-nyc.jpg"
-            alt="Slide 5 - Empire State Building"
-            class="attractions-image"
-          />
-          <img
-            src="img/fire-escape-nyc.jpg"
-            alt="Slide 4 - NYC Building"
-            class="attractions-image"
-          />
-          <img
-            src="img/subway-nyc.jpg"
-            alt="Slide 3 - Subway"
-            class="attractions-image"
-          />
-          <img
-            src="img/side-building-nyc.jpg"
-            alt="Slide 2 - NYC Building"
-            class="attractions-image"
-          />
-          <img
-            src="img/street-above-nyc.jpg"
-            alt="Slide 1 - NYC Street From Above"
-            class="attractions-image"
-          />
-        </div>
+        <div class="attraction empire">EMPIRE STATE BUILDING</div>
+        <div class="attraction liberty">STATUE OF LIBERTY</div>
+        <div class="attraction times">TIMES SQUARE</div>
+        <div class="attraction radiocity">RADIO CITY MUSIC HALL</div>
       </div>
       <div class="attractions-text">
         <p>
