added new attractions images
with hover

--- a/index.html
+++ b/index.html
@@ -99,10 +99,18 @@
         <h>ATTRACTIONS</h>
       </div>
       <div class="attractions-image-parent">
-        <div class="attraction empire">EMPIRE STATE BUILDING</div>
-        <div class="attraction liberty">STATUE OF LIBERTY</div>
-        <div class="attraction times">TIMES SQUARE</div>
-        <div class="attraction radiocity">RADIO CITY MUSIC HALL</div>
+        <div class="attraction empirestate">
+          <h>EMPIRE STATE BUILDING</h>
+        </div>
+        <div class="attraction liberty">
+          <h>STATUE OF LIBERTY</h>
+        </div>
+        <div class="attraction times">
+          <h>TIMES SQUARE</h>
+        </div>
+        <div class="attraction radiocity">
+          <h>RADIO CITY MUSIC HALL</h>
+        </div>
       </div>
       <div class="attractions-text">
         <p>
