changed all media queries

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="culture-text">
         <p>
-          Culture Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          &emsp;Culture Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Quibusdam, possimus recusandae sed impedit sequi maiores et, facere
           nam ipsum fugiat veniam pariatur, quia architecto alias praesentium
           perspiciatis saepe cumque similique. Lorem ipsum dolor sit, amet
@@ -90,7 +90,21 @@
           Assumenda, culpa. Lorem ipsum dolor sit amet, consectetur adipisicing
           elit. Dicta asperiores cupiditate suscipit atque rem laborum nesciunt
           earum deserunt? Cupiditate accusamus perferendis deserunt libero
-          dolorem consectetur laudantium amet a quos? Quisquam!
+          dolorem consectetur laudantium amet a quos? Quisquam! <br />
+          <br />
+          &emsp;Culture Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Consectetur, praesentium debitis nulla nesciunt amet molestias
+          repellendus aspernatur deserunt architecto commodi ullam veniam,
+          eveniet perferendis. Iure officiis nisi hic atque? Odio. Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Perspiciatis ut ipsa
+          temporibus voluptatibus. Magni voluptate nesciunt unde, corrupti animi
+          nulla natus ipsum rerum mollitia nam, reiciendis minus maxime sequi
+          suscipit! <br />
+          <br />
+          &emsp;Culture Lorem ipsum dolor sit amet consectetur, adipisicing
+          elit. Reprehenderit totam tempora, doloremque quos unde ducimus
+          numquam dignissimos illum eos, eligendi adipisci ipsum. Dolorem a iste
+          quis aspernatur accusamus ducimus? Maiores!
         </p>
       </div>
     </section>
@@ -114,17 +128,33 @@
       </div>
       <div class="attractions-text">
         <p>
-          Attractions Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Quibusdam, possimus recusandae sed impedit sequi maiores et, facere
-          nam ipsum fugiat veniam pariatur, quia architecto alias praesentium
-          perspiciatis saepe cumque similique. Lorem ipsum dolor sit, amet
-          consectetur adipisicing elit. Obcaecati veritatis consectetur repellat
-          tempora maiores nobis inventore facilis commodi earum, iusto excepturi
-          accusantium, expedita tenetur iure mollitia consequuntur consequatur.
-          Assumenda, culpa. Lorem ipsum dolor sit amet, consectetur adipisicing
-          elit. Dicta asperiores cupiditate suscipit atque rem laborum nesciunt
-          earum deserunt? Cupiditate accusamus perferendis deserunt libero
-          dolorem consectetur laudantium amet a quos? Quisquam!
+          &emsp;Attractions Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Quibusdam, possimus recusandae sed impedit sequi maiores et,
+          facere nam ipsum fugiat veniam pariatur, quia architecto alias
+          praesentium perspiciatis saepe cumque similique. Lorem ipsum dolor
+          sit, amet consectetur adipisicing elit. Obcaecati veritatis
+          consectetur repellat tempora maiores nobis inventore facilis commodi
+          earum, iusto excepturi accusantium, expedita tenetur iure mollitia
+          consequuntur consequatur. Assumenda, culpa. Lorem ipsum dolor sit
+          amet, consectetur adipisicing elit. Dicta asperiores cupiditate
+          suscipit atque rem laborum nesciunt earum deserunt? Cupiditate
+          accusamus perferendis deserunt libero dolorem consectetur laudantium
+          amet a quos? Quisquam!
+          <br />
+          <br />
+          &emsp;Attractions Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Consectetur, praesentium debitis nulla nesciunt amet molestias
+          repellendus aspernatur deserunt architecto commodi ullam veniam,
+          eveniet perferendis. Iure officiis nisi hic atque? Odio. Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Perspiciatis ut ipsa
+          temporibus voluptatibus. Magni voluptate nesciunt unde, corrupti animi
+          nulla natus ipsum rerum mollitia nam, reiciendis minus maxime sequi
+          suscipit! <br />
+          <br />
+          &emsp;Attractions Lorem ipsum dolor sit amet consectetur, adipisicing
+          elit. Reprehenderit totam tempora, doloremque quos unde ducimus
+          numquam dignissimos illum eos, eligendi adipisci ipsum. Dolorem a iste
+          quis aspernatur accusamus ducimus? Maiores!
         </p>
       </div>
     </section>
