removed extra class labels

--- a/index.html
+++ b/index.html
@@ -44,37 +44,15 @@
           <img
             src="img/radio-city-music-hall-nyc.jpg"
             alt="Slide 7 - Radio City Music Hall"
-            class="culture-image"
           />
-          <img
-            src="img/graffiti-nyc.jpg"
-            alt="Slide 6 - Graffiti"
-            class="culture-image"
-          />
-          <img
-            src="img/empire-nyc.jpg"
-            alt="Slide 5 - Empire State Building"
-            class="culture-image"
-          />
-          <img
-            src="img/fire-escape-nyc.jpg"
-            alt="Slide 4 - NYC Building"
-            class="culture-image"
-          />
-          <img
-            src="img/subway-nyc.jpg"
-            alt="Slide 3 - Subway"
-            class="culture-image"
-          />
-          <img
-            src="img/side-building-nyc.jpg"
-            alt="Slide 2 - NYC Building"
-            class="culture-image"
-          />
+          <img src="img/graffiti-nyc.jpg" alt="Slide 6 - Graffiti" />
+          <img src="img/empire-nyc.jpg" alt="Slide 5 - Empire State Building" />
+          <img src="img/fire-escape-nyc.jpg" alt="Slide 4 - NYC Building" />
+          <img src="img/subway-nyc.jpg" alt="Slide 3 - Subway" />
+          <img src="img/side-building-nyc.jpg" alt="Slide 2 - NYC Building" />
           <img
             src="img/street-above-nyc.jpg"
             alt="Slide 1 - NYC Street From Above"
-            class="culture-image"
           />
         </div>
       </div>
