--- a/index.html
+++ b/index.html
@@ -136,5 +136,12 @@
         </p>
       </div>
     </section>
+    <section id="restaurants" class="restaurants-container">
+      <div class="restaurants-label">
+        <h>RESTAURANTS</h>
+      </div>
+      <div class="restaurants-text">
+        <p>Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veniam impedit dignissimos possimus temporibus ad in, iusto asperiores cumque cum tempora eveniet delectus repellendus dolorem unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium in labore rerum nihil ad fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint accusamus maiores voluptatem fuga sequi nemo explicabo.</p>
+      </div>
   </body>
 </html>
