started restaurants and images

--- a/index.html
+++ b/index.html
@@ -140,8 +140,26 @@
       <div class="restaurants-label">
         <h>RESTAURANTS</h>
       </div>
+      <div class="restaurant-image-parent">
+        <img
+        src="img/katz-deli-restaurants.jpg"
+        alt="Less Expensive Restaurant - Katz's Delicatessen - Sandwich Shop & Deli"
+        class="restaurant-image"
+      />
+        <img
+        src="img/katz-deli-restaurants.jpg"
+        alt="Average Priced Restaurant - K - S"
+        class="restaurant-image"
+      />
+        <img
+        src="img/katz-deli-restaurants.jpg"
+        alt="More Expensive Restaurant - K - S"
+        class="restaurant-image"
+      /> 
+      </div>
       <div class="restaurants-text">
-        <p>Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veniam impedit dignissimos possimus temporibus ad in, iusto asperiores cumque cum tempora eveniet delectus repellendus dolorem unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium in labore rerum nihil ad fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint accusamus maiores voluptatem fuga sequi nemo explicabo.</p>
+        <p>&emsp;Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veniam impedit dignissimos possimus temporibus ad in, iusto asperiores cumque cum tempora eveniet delectus repellendus dolorem unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium in labore rerum nihil ad fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint accusamus maiores voluptatem fuga sequi nemo explicabo. <br> <br>&emsp;Restaurant Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa molestias doloremque quam beatae neque, aut eligendi cumque a at eos iure ex alias earum, expedita quae atque sit, ad totam.
+        </p>
       </div>
   </body>
 </html>
