added images with flex to restaurants

--- a/index.html
+++ b/index.html
@@ -77,12 +77,7 @@
           dolor sit amet consectetur adipisicing elit. Perspiciatis ut ipsa
           temporibus voluptatibus. Magni voluptate nesciunt unde, corrupti animi
           nulla natus ipsum rerum mollitia nam, reiciendis minus maxime sequi
-          suscipit! <br />
-          <br />
-          &emsp;Culture Lorem ipsum dolor sit amet consectetur, adipisicing
-          elit. Reprehenderit totam tempora, doloremque quos unde ducimus
-          numquam dignissimos illum eos, eligendi adipisci ipsum. Dolorem a iste
-          quis aspernatur accusamus ducimus? Maiores!
+          suscipit! 
         </p>
       </div>
     </section>
@@ -127,12 +122,7 @@
           dolor sit amet consectetur adipisicing elit. Perspiciatis ut ipsa
           temporibus voluptatibus. Magni voluptate nesciunt unde, corrupti animi
           nulla natus ipsum rerum mollitia nam, reiciendis minus maxime sequi
-          suscipit! <br />
-          <br />
-          &emsp;Attractions Lorem ipsum dolor sit amet consectetur, adipisicing
-          elit. Reprehenderit totam tempora, doloremque quos unde ducimus
-          numquam dignissimos illum eos, eligendi adipisci ipsum. Dolorem a iste
-          quis aspernatur accusamus ducimus? Maiores!
+          suscipit!
         </p>
       </div>
     </section>
@@ -140,22 +130,10 @@
       <div class="restaurants-label">
         <h>RESTAURANTS</h>
       </div>
-      <div class="restaurant-image-parent">
-        <img
-        src="img/katz-deli-restaurants.jpg"
-        alt="Less Expensive Restaurant - Katz's Delicatessen - Sandwich Shop & Deli"
-        class="restaurant-image"
-      />
-        <img
-        src="img/katz-deli-restaurants.jpg"
-        alt="Average Priced Restaurant - K - S"
-        class="restaurant-image"
-      />
-        <img
-        src="img/katz-deli-restaurants.jpg"
-        alt="More Expensive Restaurant - K - S"
-        class="restaurant-image"
-      /> 
+      <div class="restaurants">
+        <div class="restaurants katz">Katz</div>
+        <div class="restaurants average">Average</div>
+        <div class="restaurants expensive">Expensive</div>
       </div>
       <div class="restaurants-text">
         <p>&emsp;Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veniam impedit dignissimos possimus temporibus ad in, iusto asperiores cumque cum tempora eveniet delectus repellendus dolorem unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium in labore rerum nihil ad fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint accusamus maiores voluptatem fuga sequi nemo explicabo. <br> <br>&emsp;Restaurant Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa molestias doloremque quam beatae neque, aut eligendi cumque a at eos iure ex alias earum, expedita quae atque sit, ad totam.
