added the real pictures for each
still need cleaner transitions

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="culture-text">
         <p>
-          &emsp;Culture Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Culture Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Quibusdam, possimus recusandae sed impedit sequi maiores et, facere
           nam ipsum fugiat veniam pariatur, quia architecto alias praesentium
           perspiciatis saepe cumque similique. Lorem ipsum dolor sit, amet
@@ -70,7 +70,7 @@
           earum deserunt? Cupiditate accusamus perferendis deserunt libero
           dolorem consectetur laudantium amet a quos? Quisquam! <br />
           <br />
-          &emsp;Culture Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Culture Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Consectetur, praesentium debitis nulla nesciunt amet molestias
           repellendus aspernatur deserunt architecto commodi ullam veniam,
           eveniet perferendis. Iure officiis nisi hic atque? Odio. Lorem ipsum
@@ -101,7 +101,7 @@
       </div>
       <div class="attractions-text">
         <p>
-          &emsp;Attractions Lorem ipsum dolor sit amet consectetur adipisicing
+          Attractions Lorem ipsum dolor sit amet consectetur adipisicing
           elit. Quibusdam, possimus recusandae sed impedit sequi maiores et,
           facere nam ipsum fugiat veniam pariatur, quia architecto alias
           praesentium perspiciatis saepe cumque similique. Lorem ipsum dolor
@@ -115,7 +115,7 @@
           amet a quos? Quisquam!
           <br />
           <br />
-          &emsp;Attractions Lorem ipsum dolor sit amet consectetur adipisicing
+          Attractions Lorem ipsum dolor sit amet consectetur adipisicing
           elit. Consectetur, praesentium debitis nulla nesciunt amet molestias
           repellendus aspernatur deserunt architecto commodi ullam veniam,
           eveniet perferendis. Iure officiis nisi hic atque? Odio. Lorem ipsum
@@ -132,11 +132,11 @@
       </div>
       <div class="restaurants">
         <div class="restaurants katz">Katz</div>
-        <div class="restaurants average">Average</div>
-        <div class="restaurants expensive">Expensive</div>
+        <div class="restaurants sugar">Sugar Factory</div>
+        <div class="restaurants russiantearoom">Russian Tea Room</div>
       </div>
       <div class="restaurants-text">
-        <p>&emsp;Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veniam impedit dignissimos possimus temporibus ad in, iusto asperiores cumque cum tempora eveniet delectus repellendus dolorem unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium in labore rerum nihil ad fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint accusamus maiores voluptatem fuga sequi nemo explicabo. <br> <br>&emsp;Restaurant Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa molestias doloremque quam beatae neque, aut eligendi cumque a at eos iure ex alias earum, expedita quae atque sit, ad totam.
+        <p>Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veniam impedit dignissimos possimus temporibus ad in, iusto asperiores cumque cum tempora eveniet delectus repellendus dolorem unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium in labore rerum nihil ad fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint accusamus maiores voluptatem fuga sequi nemo explicabo. <br> <br>Restaurant Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa molestias doloremque quam beatae neque, aut eligendi cumque a at eos iure ex alias earum, expedita quae atque sit, ad totam. <br> <br>Click the images to see more about these restaurants!
         </p>
       </div>
   </body>
