shortened the lorem

--- a/index.html
+++ b/index.html
@@ -65,20 +65,10 @@
           consectetur adipisicing elit. Obcaecati veritatis consectetur repellat
           tempora maiores nobis inventore facilis commodi earum, iusto excepturi
           accusantium, expedita tenetur iure mollitia consequuntur consequatur.
-          Assumenda, culpa. Lorem ipsum dolor sit amet, consectetur adipisicing
+          Assumenda, culpa. <br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing
           elit. Dicta asperiores cupiditate suscipit atque rem laborum nesciunt
           earum deserunt? Cupiditate accusamus perferendis deserunt libero
-          dolorem consectetur laudantium amet a quos? Quisquam! <br />
-          <br />
-          Culture Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Consectetur, praesentium debitis nulla nesciunt amet molestias
-          repellendus aspernatur deserunt architecto commodi ullam veniam,
-          eveniet perferendis. Iure officiis nisi hic atque? Odio. Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Perspiciatis ut ipsa
-          temporibus voluptatibus. Magni voluptate nesciunt unde, corrupti animi
-          nulla natus ipsum rerum mollitia nam, reiciendis minus maxime sequi
-          suscipit! 
-        </p>
+          dolorem consectetur laudantium amet a quos? Quisquam! 
       </div>
     </section>
     <section id="attractions" class="attractions-container">
@@ -108,21 +98,11 @@
           sit, amet consectetur adipisicing elit. Obcaecati veritatis
           consectetur repellat tempora maiores nobis inventore facilis commodi
           earum, iusto excepturi accusantium, expedita tenetur iure mollitia
-          consequuntur consequatur. Assumenda, culpa. Lorem ipsum dolor sit
+          consequuntur consequatur. Assumenda, culpa. <br> <br>Lorem ipsum dolor sit
           amet, consectetur adipisicing elit. Dicta asperiores cupiditate
           suscipit atque rem laborum nesciunt earum deserunt? Cupiditate
           accusamus perferendis deserunt libero dolorem consectetur laudantium
           amet a quos? Quisquam!
-          <br />
-          <br />
-          Attractions Lorem ipsum dolor sit amet consectetur adipisicing
-          elit. Consectetur, praesentium debitis nulla nesciunt amet molestias
-          repellendus aspernatur deserunt architecto commodi ullam veniam,
-          eveniet perferendis. Iure officiis nisi hic atque? Odio. Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Perspiciatis ut ipsa
-          temporibus voluptatibus. Magni voluptate nesciunt unde, corrupti animi
-          nulla natus ipsum rerum mollitia nam, reiciendis minus maxime sequi
-          suscipit!
         </p>
       </div>
     </section>
