literally fixed everything

--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
         <h>RESTAURANTS</h>
       </div>
       <div class="restaurants">
-        <div class="restaurants katz">Katz</div>
-        <div class="restaurants sugar">Sugar Factory</div>
-        <div class="restaurants russiantearoom">Russian Tea Room</div>
+        <div class="restaurants katz"><a href="https://goo.gl/maps/mfNnNCSkVDSjse7K9"></a></div>
+        <div class="restaurants sugar"><a href="https://goo.gl/maps/LAP17N2AkHtQdQt56"></a></div>
+        <div class="restaurants russiantearoom"><a href="https://goo.gl/maps/poNyFgemkdTyahox7"></a></div>
       </div>
       <div class="restaurants-text">
-        <p>Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veniam impedit dignissimos possimus temporibus ad in, iusto asperiores cumque cum tempora eveniet delectus repellendus dolorem unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium in labore rerum nihil ad fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint accusamus maiores voluptatem fuga sequi nemo explicabo. <br> <br>Restaurant Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa molestias doloremque quam beatae neque, aut eligendi cumque a at eos iure ex alias earum, expedita quae atque sit, ad totam. <br> <br>Click the images to see more about these restaurants!
+        <p>Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veniam impedit dignissimos possimus temporibus ad in, iusto asperiores cumque cum tempora eveniet delectus repellendus dolorem unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium in labore rerum nihil ad fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint accusamus maiores voluptatem fuga sequi nemo explicabo. <br> <br>Restaurant Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa molestias doloremque quam beatae neque, aut eligendi cumque a at eos iure ex alias earum, expedita quae atque sit, ad totam. <br> <br>Click the images to learn more about these restaurants!
         </p>
       </div>
   </body>
