added bottom circles and borders

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
           consectetur adipisicing elit. Obcaecati veritatis consectetur repellat
           tempora maiores nobis inventore facilis commodi earum, iusto excepturi
           accusantium, expedita tenetur iure mollitia consequuntur consequatur.
-          Assumenda, culpa. <br> <br>Lorem ipsum dolor sit amet, consectetur adipisicing
-          elit. Dicta asperiores cupiditate suscipit atque rem laborum nesciunt
-          earum deserunt? Cupiditate accusamus perferendis deserunt libero
-          dolorem consectetur laudantium amet a quos? Quisquam! 
+          Assumenda, culpa. <br />
+          <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
+          asperiores cupiditate suscipit atque rem laborum nesciunt earum
+          deserunt? Cupiditate accusamus perferendis deserunt libero dolorem
+          consectetur laudantium amet a quos? Quisquam!
+        </p>
       </div>
     </section>
     <section id="attractions" class="attractions-container">
@@ -91,18 +93,18 @@
       </div>
       <div class="attractions-text">
         <p>
-          Attractions Lorem ipsum dolor sit amet consectetur adipisicing
-          elit. Quibusdam, possimus recusandae sed impedit sequi maiores et,
-          facere nam ipsum fugiat veniam pariatur, quia architecto alias
-          praesentium perspiciatis saepe cumque similique. Lorem ipsum dolor
-          sit, amet consectetur adipisicing elit. Obcaecati veritatis
-          consectetur repellat tempora maiores nobis inventore facilis commodi
-          earum, iusto excepturi accusantium, expedita tenetur iure mollitia
-          consequuntur consequatur. Assumenda, culpa. <br> <br>Lorem ipsum dolor sit
-          amet, consectetur adipisicing elit. Dicta asperiores cupiditate
-          suscipit atque rem laborum nesciunt earum deserunt? Cupiditate
-          accusamus perferendis deserunt libero dolorem consectetur laudantium
-          amet a quos? Quisquam!
+          Attractions Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Quibusdam, possimus recusandae sed impedit sequi maiores et, facere
+          nam ipsum fugiat veniam pariatur, quia architecto alias praesentium
+          perspiciatis saepe cumque similique. Lorem ipsum dolor sit, amet
+          consectetur adipisicing elit. Obcaecati veritatis consectetur repellat
+          tempora maiores nobis inventore facilis commodi earum, iusto excepturi
+          accusantium, expedita tenetur iure mollitia consequuntur consequatur.
+          Assumenda, culpa. <br />
+          <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
+          asperiores cupiditate suscipit atque rem laborum nesciunt earum
+          deserunt? Cupiditate accusamus perferendis deserunt libero dolorem
+          consectetur laudantium amet a quos? Quisquam!
         </p>
       </div>
     </section>
@@ -111,13 +113,53 @@
         <h>RESTAURANTS</h>
       </div>
       <div class="restaurants">
-        <div class="restaurants katz"><a href="https://goo.gl/maps/mfNnNCSkVDSjse7K9"></a></div>
-        <div class="restaurants sugar"><a href="https://goo.gl/maps/LAP17N2AkHtQdQt56"></a></div>
-        <div class="restaurants russiantearoom"><a href="https://goo.gl/maps/poNyFgemkdTyahox7"></a></div>
+        <div class="restaurants katz">
+          <a href="https://goo.gl/maps/mfNnNCSkVDSjse7K9"></a>
+        </div>
+        <div class="restaurants sugar">
+          <a href="https://goo.gl/maps/LAP17N2AkHtQdQt56"></a>
+        </div>
+        <div class="restaurants russiantearoom">
+          <a href="https://goo.gl/maps/poNyFgemkdTyahox7"></a>
+        </div>
       </div>
       <div class="restaurants-text">
-        <p>Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias veniam impedit dignissimos possimus temporibus ad in, iusto asperiores cumque cum tempora eveniet delectus repellendus dolorem unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium in labore rerum nihil ad fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint accusamus maiores voluptatem fuga sequi nemo explicabo. <br> <br>Restaurant Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa molestias doloremque quam beatae neque, aut eligendi cumque a at eos iure ex alias earum, expedita quae atque sit, ad totam. <br> <br>Click the images to learn more about these restaurants!
+        <p>
+          Restaurants Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Molestias veniam impedit dignissimos possimus temporibus ad in, iusto
+          asperiores cumque cum tempora eveniet delectus repellendus dolorem
+          unde voluptatum vero provident facilis! Lorem ipsum, dolor sit amet
+          consectetur adipisicing elit. Praesentium in labore rerum nihil ad
+          fugiat dolorum, facilis quasi non consectetur voluptas nostrum sint
+          accusamus maiores voluptatem fuga sequi nemo explicabo. <br />
+          <br />Restaurant Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Ipsa molestias doloremque quam beatae neque, aut eligendi cumque
+          a at eos iure ex alias earum, expedita quae atque sit, ad totam.
+          <br />
+          <br />Click the images to learn more about these restaurants!
         </p>
       </div>
+    </section>
+    <section id="more" class="more-container">
+      <div class="more-label">
+        <h>LEARN MORE</h>
+      </div>
+      <div class="more-circles">
+        <div class="more-circles news">
+          <h>NEWS</h>
+          <a href="https://abc7ny.com/new-york/"></a>
+        </div>
+        <div class="more-circles weather">
+          <h>WEATHER</h>
+          <a
+            href="https://weather.com/weather/today/l/f892433d7660da170347398eb8e3d722d8d362fe7dd15af16ce88324e1b96e70"
+          ></a>
+        </div>
+        <div class="more-circles contactus">
+          <h>CONTACT<br />US</h>
+          <a href="https://www1.nyc.gov/home/contact-us.page"></a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
