finished whole bottom section

--- a/index.html
+++ b/index.html
@@ -160,6 +160,22 @@
           <a href="https://www1.nyc.gov/home/contact-us.page"></a>
         </div>
       </div>
+      <div class="more-links">
+        <img src="img/instagram.png" alt="Instagram Link" />
+        <img src="img/facebook.png" alt="Facebook Link" />
+        <img src="img/twitter.png" alt="Twitter Link" />
+        <img
+          class="more-links youtube"
+          src="img/youtube.png"
+          alt="YouTube Link"
+        />
+      </div>
+      <div class="copyright-container">
+        <div class="copyright-container copy">
+          <h>Copyright 2021 | Zack Rimshnick</h>
+          <a href="https://www.linkedin.com/in/zack-rimshnick-b9b659200/"></a>
+        </div>
+      </div>
     </section>
   </body>
 </html>
